[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "pytest_cache_assert"
length_sort = false
line_length = 120
multi_line_output = 5

[tool.calcipy.test]
pythons = ["3.8.4", "3.10"]
args_diff = "--fail-under=85"

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.0.6"
version_files = ["pyproject.toml", "pytest_cache_assert/__init__.py"]

[tool.poetry]
name = "pytest_cache_assert"
version = "3.0.6"
description = "Cache assertion data to simplify regression testing of complex serializable data"
license = "MIT"
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
maintainers = []
repository = "https://github.com/kyleking/pytest_cache_assert"
documentation = "https://github.com/kyleking/pytest_cache_assert/docs"
readme = "docs/README.md"
include = ["LICENSE.md"]
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Testing",
] # https://pypi.org/classifiers/

[tool.poetry.plugins."pytest11"]
# Register as a Pytest Plugin
# Docs: https://docs.pytest.org/en/latest/how-to/writing_plugins.html#making-your-plugin-installable-by-others
pytest_cache_assert = "pytest_cache_assert.plugin"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/pytest_cache_assert/issues"
"Changelog" = "https://github.com/kyleking/pytest_cache_assert/blob/main/docs/docs/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8.4"
arrow = ">=1.2.3"
beartype = ">=0.11.0"
deepdiff6 = ">=6.2.0" # FYI: Only temporarily named deepdiff6 (was deepdiff)
pydantic = ">=1.8.1"
pytest = ">=5.0.0"
StrEnum = ">=0.4.8"

[tool.poetry.dev-dependencies]
calcipy = { version = ">=0.20.1", extras = [
  "dev",
  "lint",
  "test",
], python = "^3.8.4" }
# FYI: New dev-dependencies need to be copied to noxfile.py
hypothesis = ">=6.55.0"
moto = ">=3.0.0"
pendulum = ">=2.1.2"
pytest-benchmark = ">=3.4.1"
pytest-flask = ">=1.2.0"
